# bf2os

./: .gitmodules  Makefile  README.md  image.iso  limine.cfg  linker.ld  main.cpp  meson.build  misc.hpp
example/: example.bf  example.iso
src/: main.cpp  misc.hpp
